Adopt TextBundle packages for Write content
